--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.17.16",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "^19",
+    "typescript": "5.7.3"
   }
 }
