--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
 NODE_ENV=development
-API_URL=http://localhost
-
-POSTGRES_DATABASE=postgres
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=postgres
+API_URL=http://localhost:3000
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
