--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       target: ${NODE_ENV:-production}
     environment:
-      NODE_ENV: ${NODE_ENV}
+      NODE_ENV: ${NODE_ENV:-production}
       NEXT_PUBLIC_API_URL: ${API_URL}
     ports:
       - "3000:3000"
@@ -17,9 +17,9 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_DB: ${POSTGRES_DATABASE}
-      POSTGRES_USER: ${POSTGRES_USERNAME}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE-postgres}
+      POSTGRES_USER: ${POSTGRES_USERNAME-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD-postgres}
     ports:
       - "5432:5432"
     volumes:
