--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
